--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "predis/predis": "~1.0",
-        "encore/laravel-admin" : "dev-master"
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
