--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "encore/laravel-admin": "^1.6",
+        "fabpot/goutte": "^3.2",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "6.2",
         "laravel/framework": "5.5.*",
